--- a/code/src/styles/PostEvent.css
+++ b/code/src/styles/PostEvent.css
@@ -292,7 +292,7 @@ textarea.form-input::placeholder {
   }
 
   .postevent-title {
-    font-size: 28px;
+    font-size: 32px;
   }
 }
 
